Remove TalkBack role description for table cell

TalkBack should just speak the cell data for cells in table.

TBR=avi@chromium.org

Bug: 669622
Change-Id: Iecb736acdbe36d106672b97425bb72988eef1efa
Reviewed-on: https://chromium-review.googlesource.com/1108920
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569278}
Former-commit-id: 9695062bc8c6a7a95ae302bf52b9ffa834f96979